--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,4 +1,10 @@
 ---
+AllCops:
+  DisplayCopNames:    true
+  DisplayStyleGuide:  true
+  StyleGuideCopsOnly: true
+  TargetRubyVersion:  2.2
+
 Lint/HandleExceptions:
   Exclude:
     - '**/*_spec.rb'
