--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -1,4 +1,12 @@
 ---
+engines:
+  rubocop:
+    enabled: true
+  duplication:
+    enabled: true
+    config:
+      languages:
+        - ruby
 exclude_paths:
 - "benchmarks/**/*"
 - "spec/**/*"
