--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,19 @@
 ---
+sudo:     false
 language: ruby
-before_install: gem install bundler -v 1.11.2
 cache:    bundler
-script:   bundle  exec rspec
+script:
+  - bundle exec rspec
+  - bundle exec rubocop
 rvm:
   - '2.2'
-  - '2.3'
+  - '2.3.0'
+  # - rbx-2
   - ruby-head
-  - rbx-2.4
-  - rbx-2.5
-  - rbx-head
-  - jruby-9
+  - jruby-9.1.0.0
   - jruby-head
+before_install: gem install bundler -v 1.12.5
 matrix:
   allow_failures:
     - rvm: ruby-head
     - rvm: jruby-head
-    - rvm: rbx-head
