--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ language: ruby
 cache: bundler
 bundler_args: --without benchmarks tools
 script:
-  - bundle exec rake spec
+  - bundle exec rake
 rvm:
   - 2.3.8
   - 2.4.6
