Fix rubocop violations
* Disable the rule to change extend self into module_function
  (we use extend self for a reason)
* Remove trailing comma in a hash

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -38,6 +38,9 @@ Style/Lambda:
 Style/LambdaCall:
   Enabled: false
 
+Style/ModuleFunction:
+  Enabled: false
+
 Style/RescueModifier:
   Exclude:
     - spec/**/*.rb
