--- a/.github/workflows/custom_ci.yml
+++ b/.github/workflows/custom_ci.yml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        ruby: ["2.6.x", "2.5.x", "2.4.x"]
+        ruby: ["2.6.x", "2.5.x", "2.4.x", "2.3.x"]
         include:
           - ruby: "2.6.x"
             coverage: "true"
