--- a/.github/workflows/custom_ci.yml
+++ b/.github/workflows/custom_ci.yml
@@ -35,7 +35,7 @@ jobs:
           COVERAGE: ${{matrix.coverage}}
         run: |
           gem install bundler
-          bundle install --jobs 4 --retry 3 --without tools docs
+          bundle install --jobs 4 --retry 3 --without tools docs benchmarks
           bundle exec rake
       - name: Send coverage results
         if: "matrix.coverage == 'true'"
@@ -66,5 +66,5 @@ jobs:
       - name: Run all tests
         run: |
           gem install bundler
-          bundle install --jobs 4 --retry 3 --without tools docs
+          bundle install --jobs 4 --retry 3 --without tools docs benchmarks
           bundle exec rspec
