--- a/.github/workflows/custom_ci.yml
+++ b/.github/workflows/custom_ci.yml
@@ -3,7 +3,7 @@ name: ci
 on:
   push:
     paths:
-      - .github/workflows/ci.yml
+      - .github/workflows/custom_ci.yml
       - lib/**
       - spec/**
 
