--- a/.github/workflows/custom_ci.yml
+++ b/.github/workflows/custom_ci.yml
@@ -32,10 +32,12 @@ jobs:
           ./tmp/cc-test-reporter before-build
       - name: Run all tests
         env:
+          CI: "true"
           COVERAGE: ${{matrix.coverage}}
         run: |
           gem install bundler
-          bundle install --jobs 4 --retry 3 --without tools docs benchmarks
+          bundle config set without 'tools docs benchmarks'
+          bundle install --jobs 4 --retry 3
           bundle exec rake
       - name: Send coverage results
         if: "matrix.coverage == 'true'"
