--- a/.github/workflows/custom_ci.yml
+++ b/.github/workflows/custom_ci.yml
@@ -15,9 +15,9 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        ruby: ["2.6.x", "2.5.x", "2.4.x", "2.3.x"]
+        ruby: ["2.6", "2.5", "2.4", "2.3"]
         include:
-          - ruby: "2.6.x"
+          - ruby: "2.6"
             coverage: "true"
     steps:
       - uses: actions/checkout@v1
