--- a/.github/workflows/custom_ci.yml
+++ b/.github/workflows/custom_ci.yml
@@ -15,14 +15,14 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        ruby: ["2.6", "2.5", "2.4", "2.3"]
+        ruby: ["2.6", "2.5", "2.4", "2.3", "2.7", "jruby"]
         include:
           - ruby: "2.6"
             coverage: "true"
     steps:
       - uses: actions/checkout@v1
       - name: Set up Ruby
-        uses: actions/setup-ruby@v1
+        uses: eregon/use-ruby-action@master
         with:
           ruby-version: ${{matrix.ruby}}
       - name: Download test reporter
@@ -52,23 +52,3 @@ jobs:
           GIT_BRANCH=`ruby -e "puts ENV['GITHUB_REF'].split('/', 3).last"` \
           GIT_COMMITTED_AT=`ruby -r time -e "puts Time.iso8601(ENV['GIT_COMMITTED_AT']).to_i"` \
           ./tmp/cc-test-reporter after-build
-
-  tests-others:
-    runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        image: ["jruby:9.2.8", "ruby:rc"]
-    container:
-      image: ${{matrix.image}}
-    steps:
-      - uses: actions/checkout@v1
-      - name: Install git
-        run: |
-          apt-get update
-          apt-get install -y --no-install-recommends git
-      - name: Run all tests
-        run: |
-          gem install bundler
-          bundle install --jobs 4 --retry 3 --without tools docs benchmarks
-          bundle exec rspec
