[ci] trigger build when config changes

--- a/.github/workflows/custom_ci.yml
+++ b/.github/workflows/custom_ci.yml
@@ -1,11 +1,9 @@
-# this file is managed by dry-rb/devtools project
-
 name: ci
 
 on:
   push:
     paths:
-      - .github/workflows/ci.yml
+      - .github/workflows/custom_ci.yml
       - lib/**
       - spec/**
       - Rakefile
