--- a/.github/workflows/sync_configs.yml
+++ b/.github/workflows/sync_configs.yml
@@ -28,14 +28,6 @@ jobs:
         run: ln -sf "$(bundle info ossy --path)/bin/ossy" bin/ossy
       - name: Clone devtools
         run: git clone https://github.com/dry-rb/devtools.git tmp/devtools
-      - name: Compile file templates
-        run: |
-          if [ -f "project.yml" ]; then
-            for t in `ls tmp/devtools/templates`
-            do
-              bin/ossy t c $t $(echo $t | sed -e 's/^tmp\/devtools\/templates\///g' | sed -e 's/\.erb$//g') project.yml
-            done
-          fi
       - name: Merge configuration files from devtools
         run: |
           for f in `ls tmp/devtools/shared/.github/workflows/*.yml`
@@ -44,13 +36,16 @@ jobs:
             o=".github/workflows/custom/$n";
             [ -f $o ] && bin/ossy c m $f $o .github/workflows/$n
           done
-      - name: Update configuration files from devtools
+      - name: Compile file templates
         run: |
-          if [ -f ".github/workflows/custom_ci.yml" ]; then
-            rsync -arv --exclude '.github/workflows/ci.yml' tmp/devtools/shared/ . ;
-          else
-            rsync -arv tmp/devtools/shared/ . ;
+          if [ -f "project.yml" ]; then
+            for t in `ls tmp/devtools/templates`
+            do
+              bin/ossy t c $t $(echo $t | sed -e 's/^tmp\/devtools\/templates\///g' | sed -e 's/\.erb$//g') project.yml
+            done
           fi
+      - name: Update configuration files from devtools
+        run: rsync -arv tmp/devtools/shared/ .
       - name: Commit changes
         run: |
           rm bin/ossy
