--- a/.github/workflows/sync_configs.yml
+++ b/.github/workflows/sync_configs.yml
@@ -38,11 +38,11 @@ jobs:
           fi
       - name: Merge configuration files from devtools
         run: |
-          for f in `ls tmp/devtools/shared/.github/workflows/*.yml`
+          for f in `ls tmp/devtools/workflows/*.yml`
           do
             n="$(basename $f)";
-            o=".github/workflows/custom/$n";
-            [ -f $o ] && bin/ossy c m $f $o .github/workflows/$n
+            c=".github/workflows/custom/$n";
+            [ -f $c ] && bin/ossy c m $f $c .github/workflows/$n || echo "no custom config found for $f"
           done
       - name: Update configuration files from devtools
         run: |
