--- a/.github/workflows/sync_configs.yml
+++ b/.github/workflows/sync_configs.yml
@@ -33,7 +33,7 @@ jobs:
           if [ -f "project.yml" ]; then
             for t in `ls tmp/devtools/templates`
             do
-              bin/ossy t c $t $(echo $t | sed -e 's/^tmp\/devtools\/templates\///g' | sed -e 's/\.erb$//g') project.yml
+              bin/ossy t c tmp/devtools/templates/$t $(basename $t .erb) project.yml
             done
           fi
       - name: Merge configuration files from devtools
