--- a/.github/workflows/docsite.yml
+++ b/.github/workflows/docsite.yml
@@ -8,8 +8,7 @@ on:
       - docsite/**
       - .github/workflows/docsite.yml
     branches:
-      - master
-      - release-**
+      - gha-testing
     tags:
 
 jobs:
@@ -21,14 +20,32 @@ jobs:
         uses: actions/setup-ruby@v1
         with:
           ruby-version: "2.6.x"
+      - name: Set up git user
+        run: |
+          git config --local user.email "dry-bot@dry-rb.org"
+          git config --local user.name "dry-bot"
       - name: Install dependencies
         run: |
           gem install bundler
           bundle install --jobs 4 --retry 3 --without benchmarks sql
       - name: Symlink ossy
         run: mkdir -p bin && ln -sf "$(bundle show ossy)/bin/ossy" bin/ossy
+      - name: Update release branches
+        run: |
+          branches=`git log --format=%B -n 1 $GITHUB_SHA | grep "docsite:release-"`
+
+          if [ ! -z "$branches" ]; then
+            for b in $branches
+            do
+              git checkout $b
+              git cherry-pick $b -m 1
+            done
+
+            git push --all "https://dry-bot:${{secrets.GH_PAT}}@github.com/$GITHUB_REPOSITORY.git"
+          fi
+        run:
       - name: Trigger dry-rb.org deploy
         env:
           GITHUB_LOGIN: dry-bot
-          GITHUB_TOKEN: ${{ secrets.GH_PAT }}
+          GITHUB_TOKEN: ${{secrets.GH_PAT}}
         run: bin/ossy github workflow dry-rb/dry-rb.org ci
