--- a/changelog.yml
+++ b/changelog.yml
@@ -1,6 +1,6 @@
 ---
 - version: 3.0.4
-  date: unreleased
+  date: '2020-09-28'
   fixed:
   - 'Arity check for lambdas used for coercion (@flash-gordon)'
 - version: 3.0.3
